Modified the InputValidation class and Unit class, replaced validation methods in Item with validation methods from the InputValidation class